--- a/style.css
+++ b/style.css
@@ -7,24 +7,21 @@
   font-family: var(--font-family);
   src: local("/Roboto/Roboto-Bold.woff2") url(/Roboto/Roboto-Bold.woff2)
     format("woff2");
-  font-weight: bold, normal;
-  font-style: normal;
-  font-variant: normal;
 }
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: var(--font-family);
 }
 
 body {
   font-family: var(--font-family);
   background: var(--background-color);
-  overflow: hidden hidden;
+  overflow: hidden;
   width: 100vw;
   height: 100vh;
-  margin: 0;
 }
 
 body::-webkit-scrollbar {
@@ -33,33 +30,24 @@ body::-webkit-scrollbar {
 
 .twitch-avatar-img-container {
   background: var(--background-color);
-  width: 600px;
-  max-width: 600px;
-  height: 600px;
-  max-height: 600px;
-  object-fit: contain;
   display: flex;
   align-items: center;
-  align-content: center;
-  justify-items: center;
   justify-content: center;
   user-select: none;
   cursor: default;
   pointer-events: none;
+  width: 100vw;
+  height: 100vh;
 }
 
 .twitch-avatar-img {
   background: var(--background-color);
-  width: 600px;
-  max-width: 600px;
-  height: 600px;
-  max-height: 600px;
-  object-fit: contain;
-  display: flex;
-  align-items: center;
-  align-content: center;
-  justify-items: center;
-  justify-content: center;
+  border: none;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  image-rendering: crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
   user-select: none;
   cursor: default;
   pointer-events: none;
